_/data/documentations/numpy/numpy/typing/tests/data/pass/random_py.comment
['text':' default rng','line_number':16,'multiline':False]['text':' Seed Sequence','line_number':28,'multiline':False]['text':' Bit Generators','line_number':34,'multiline':False]['text':' RandomState','line_number':918,'multiline':False]