_/data/documentations/numpy/numpy/typing/tests/data/fail/nested_sequence_pyi.comment
['text':' E: incompatible type','line_number':13,'multiline':False]['text':' E: incompatible type','line_number':14,'multiline':False]['text':' E: incompatible type','line_number':15,'multiline':False]['text':' E: incompatible type','line_number':16,'multiline':False]['text':' E: incompatible type','line_number':17,'multiline':False]